tests/ui/statics/missing_lifetime.stderr
error[E0261]: use of undeclared lifetime name `'reborrow`
  --> $DIR/missing_lifetime.rs:4:15
   |
LL | struct Slice(&'reborrow [&'static [u8]]);
   |               ^^^^^^^^^ undeclared lifetime
   |
help: consider introducing lifetime `'reborrow` here
   |
LL | struct Slice<'reborrow>(&'reborrow [&'static [u8]]);
   |             +++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0261`.
